styles.css
/*
-extra large devices (large laptops and desktops, 1200px and up)
*/
@media only screen and (min-width: 1200px) {

    /******************************************************************************
                            GENERAL STYLING
    ******************************************************************************/

    html {
        scroll-behavior: smooth;
    }

    html, body {
        display: flex;
        flex-direction: row;
        width: 100%;
        min-height: 100vh;
        margin: 0;
        font-family: "Roboto", sans-serif;
        color: rgb(255, 255, 255);
        background: rgb(15, 23, 42);
    }

    body::-webkit-scrollbar {
        display: none;
    }

    img {
        display: block;
        margin-right: 1em;
    }

    #container {
        display: flex;
        padding-left: 10rem;
        padding-right: 10rem;
        gap: 1rem;
    }

    #left {
        flex: 1;
        display: flex;
        flex-direction: column;
        position: sticky;
        width: 40%;
        height: 100vh;
        top: 0;
    }

    #left::-webkit-scrollbar {
        display: none;
    }

    #right {
        display: inline-block;
        flex-direction: column;
        position: sticky;
        width: 60%;
        overflow: auto;
    }

    #right::-webkit-scrollbar {
        display: none;
    }

    section {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        border-bottom: none;
    }


    .section-header-container {
        display:flex;
        flex-direction: column;
        align-items: flex-start;

    }

    .section-title {
        font-size: 2em;
        font-weight: 700;
        color: rgb(255, 255, 255);
    }

    .section-intro {
        font-size: 1.5em;
        font-weight: 300;
        color: rgb(203, 213, 225);
    }

    .button {
        width: 48px;
        height: 48px;
        text-decoration: none;
        margin: 0.4em;
    }

    .hidden {
        opacity: 0;
        filter: blur(5px);
        transform: translateX(100%);
        transition: all 1s;
    }

    .show {
        opacity: 1;
        filter: blur(0);
        transform: translateX(0%);
    }

    .text-color-general {
        color: rgb(203, 213, 225);
    }



    /******************************************************************************
                            HERO SECTION
    ******************************************************************************/

    #hero-section {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        border-bottom: none;
        padding: 2em;
    }

    #hero-title {
        font-size: 4em;
        color: rgb(226 232 240);
    }

    #hero-intro {
        color: rgb(148 163 184);
    }

    #hero-job {
        color: rgb(226 232 240);
    }

    #hero-button-container {
        display: inline-block;
        margin-top: 12em;
        padding-right: 1em;
    }

    #nav-menu {
        list-style-type: none;
    }


    .nav-menu-link {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 0.25em;
        color: rgb(100, 116, 139);
        text-decoration: none;
    }

    .nav-indicator {
        display: inline-block;
        background-color: teal;
        width: 2em;
        height: 1px;
        margin-right: 1em;
    }


    .nav-menu-item:hover a.nav-menu-link  {
        color: rgb(226 232 240);
    }

    .nav-menu-item:hover .nav-indicator {
        background-color: rgb(226 232 240);
    }


    /******************************************************************************
                            ABOUT ME SECTION
    ******************************************************************************/

    #about-section {
    }

    #about-content-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-around;
        width: 100%;
    }

    #about-intro-content {
        border: 2px, teal, solid;
        border-radius: 0.5em;
        padding: 1em;
        box-shadow: 5px 5px;
        margin: 1em;
        color: teal;
    }

    #about-description-content {
        border: 2px, teal, solid;
        border-radius: 0.5em;
        padding: 1em;
        margin: 1em;
        box-shadow: 5px 5px;
        color: teal;
    }


    /******************************************************************************
                            SKILLS AND EXPERIENCE SECTION
    ******************************************************************************/

    #skills-section {
        
    }

    #skills-content-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 1em;
        margin: 1em;  
    }

    #skill-languages-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: center;
        padding: 1em;
        margin: 1em;
        border: 2px, teal, solid;
        border-radius: 0.5em;
        box-shadow: 5px 5px;
        color: teal;
        width: 100%;
    }

    #skill-icons-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        padding: 1em;
        border: 3px, teal, solid;
        border-radius: 0.5em;
        box-shadow: 5px 5px;
        color: teal;
        width: 100%;
    }

    .skill-icons-row {
        padding: 1em;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
    }

    .skill-icons-row:nth-child(1) {
        transition-delay: 0ms;
    }

    .skill-icons-row:nth-child(2) {
        transition-delay: 0ms;
    }

    .skill-icons-row:nth-child(3) {
        transition-delay: 0ms;
    }

    .skills-button {
        text-decoration: none;
    }

    .skills-button-icon {
        height: 64px;
        width: 64px;
    }


    /******************************************************************************
                                PORTFOLIO SECTION
    *******************************************************************************/

    #portfolio-section {
        border-bottom: none;
    }

    #projects-container {
        display: flex;
        flex-direction: column;
        margin: 1em;
        padding: 1em;
        margin-left: 1em;
        width: 100%;
    }

    .project-container {
        margin: 1em;
        padding: 1em;
        border: 0.1em, teal, solid;
        border-radius: 0.5em;
        display: flex;
        flex-direction: row;
        align-items: center;
        box-shadow: 5px 5px;
        color: teal;
        

    }

    .project-container:nth-child(1){
        transition-delay: 200ms;
    }
    .project-container:nth-child(2) {
        transition-delay: 300ms;
    }
    .project-container:nth-child(3) {
        transition-delay: 400ms;
    }
    .project-container:nth-child(4) {
        transition-delay: 500ms;
    }
    .project-container:nth-child(5) {
        transition-delay: 600ms;
    }

    .project-text {
        
    }
}
/******************************************************************************
                    MEDIA QUERIES FOR RESPONSIVENESS
*******************************************************************************/

/*
-extra small devices (phones, 600px and down)
*/
@media only screen and (max-width: 599.9px) {
    body {
        background-color: red;
    }

}

/*
-small devices (portrait tablets and large phones, 600px to 768px)
*/
@media only screen and (min-width: 600px) and (max-width: 767.9px) {
    body {
        background-color: blue;
    }
}

/*
-medium devices (landscape tablets, 768px to 992px)
*/
@media only screen and (min-width: 768px) and (max-width: 991.99px) {
    body {
        background-color: greenyellow;
    }
}

/*
-large devices (laptops/desktops, 992px to 1200px)
*/
@media only screen and (min-width: 992px) and (max-width: 1199.9px) {
    body {
        background-color: yellow;
    }
}



/******************************************************************************
                            OTHER
*******************************************************************************/


@media(prefers-reduced-motion) {
    .hidden {
        transition: none;
    }
}

